# mc_renderer

./: .gitignore  Cargo.toml  flake.nix  start.sh
src/: asset_pack.rs  block.rs  cli.rs  debug_menu.rs  main.rs  mc_meta.rs  mesh.rs  resources.rs  window.rs
src/resources/: asset_pack.rs  mc_meta.rs  textures.rs
